Criando classe Player e mapeando as sprites

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,8 @@ add_executable(${PROJECT_NAME}
         Source/AudioSystem.h
         Source/Transform.cpp
         Source/Transform.h
+        Source/Actors/Player.cpp
+        Source/Actors/Player.h
 )
 
 ####### DO NOT EDIT BELLOW
